Fix spacing around mapzen logo in navbar

--- a/src/stylesheets/common/_navbar.scss
+++ b/src/stylesheets/common/_navbar.scss
@@ -97,7 +97,7 @@ body {
 // there is some more involved CSS overriding here
 .navbar-brand {
   // Match container edge
-  padding: 8px 15px;
+  padding: 5px 30px 11px 15px;
 
   // Branding size at tablet/desktop screen
   @media (min-width: $screen-sm) {
